Fixed overflow error

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -49,7 +49,7 @@ button {
 }
 
 body {
-  @apply bg-ard tracking-tight text-foreground font-montserrat;
+  @apply bg-ard tracking-tight text-foreground font-montserrat overflow-x-hidden;
 }
 
 section {
